fix DOM overflow

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -23,6 +23,7 @@ body,
 html {
    height: 100%;
    margin: 0;
+   overflow: hidden;
 }
 
 .center {
